...
        <View style={localStyles.qrHeader}>
          <TouchableOpacity onPress={onBack} style={localStyles.backButton}>
            <Icon name="back" size={24} color={COLORS.VERY_LIGHT_GRAY} />
          </TouchableOpacity>
          <View style={localStyles.titleContainer}>
            <Text style={styles.qrModalTitle}>
              {addressType === 'Taproot' || addressType === 'UNIT Address' ? 'UNIT address' : 'Bitcoin address'}
            </Text>
          </View>
        </View>
        <Text style={styles.qrModalSubtitle}>
          {addressType === 'Taproot' || addressType === 'UNIT Address'
            ? 'Only use this address to receive UNIT.'
            : 'Only use this address to receive Bitcoin.'}
        </Text>

        {/* QR Code */}
        <View style={styles.qrCodeContainer}>
          <QRCode
            value={address}
...
        >
          <View style={localStyles.addressContentContainer}>
            <View style={localStyles.addressLabelRow}>
              <Text style={styles.qrAddressLabelText}>
                {addressType === 'Taproot' || addressType === 'UNIT Address' ? 'UNIT' : addressType}
              </Text>
              <Text style={localStyles.tapToCopyText}>Tap to copy</Text>
            </View>
            <Text style={styles.qrAddressFullText}>{address}</Text>
          </View>
        </TouchableOpacity>

        {/* Share button */}
...
