...
    !(isTurboBtc ? canContinueWithTurboBtc : canContinue) ||
    isReviewing ||
    isRequestingMint ||
    isRequestingBtcTurbo;

  return (
    <SafeAreaView style={styles.container} edges={['top']} testID="send-input-screen">
      <KeyboardAvoidingView
        behavior={Platform.OS === 'ios' ? 'padding' : 'height'}
        style={styles.flex}
        testID="send-input-content"
      >
        <ScrollView
...
